수정 기능 추가

--- a/site/css/screen.css
+++ b/site/css/screen.css
@@ -50,6 +50,14 @@ body {
     clear: both;
 }
 
+.viewMode {
+    display: block;
+}
+
+.editMode {
+    display: none;
+}
+
 #addBook div {
     width: 550px;
 }
